:bug: scroll on mobile: avoid REM

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,9 +2,10 @@
 
 html,
 body,
-main {
+main,
+#sapper {
   overflow: hidden;
-  height: 100vh;
+  height: 100%;
   width: 100%;
 
   font-family: $primary_font;
